Responsive Styles Update added a media query for tablets and phones removed some hardcoded styles and replaced them with more robust css in styles.css fixed invoice preview overflow & misc changes :3

--- a/home.css
+++ b/home.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
-  background-color: #F9FAFB;
+  background-color: #f2f2f2;
   color:  #111827;
   text-align: center;
 }
@@ -13,7 +13,7 @@ body {
   align-items: center;
   padding-left: 15px;
   border-bottom: 1.50px solid  #111827;
-  background-color: #F9FAFB;
+  background-color: #f2f2f2;
   color:  #111827;
   text-decoration: none;
 }
@@ -92,4 +92,10 @@ body {
 
 .arrow {
   margin-left: 5px;
+}
+
+@media (max-width: 768px) {
+  .hero h1{
+    font-size: 4rem;
+  }
 }
